--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ permalink:           pretty
 
 # Setup
 title:               David's Blog
-tagline:             'A graduate student major in CS'
+tagline:             'A graduate student in Computer Science'
 description:         ''
 url:                 http://youchen.me
 baseurl:             ""
